# cairn-ai

./: .gitignore  Dockerfile  LICENSE  PITCH.md  README.md  TERMS.md  pyproject.toml
scripts/: record_demo.sh
src/cairn_ai/: CHECKSUMS.json  __init__.py  backup.py  cli.py  db.py  inference.py  ingest.py  integrity.py  journal.py  pq_identity.py  rotate.py  server.py  trust.py
src/claude_persist/: CHECKSUMS.json  __init__.py  __main__.py  cli.py  integrity.py  journal.py  license.py  server.py
tests/: test_free_tier.py  test_integration.sh  test_integrity.py  test_paid_tier.py  test_stress.py
